--- a/src/app/components/modal/cropper/cropper.component.scss
+++ b/src/app/components/modal/cropper/cropper.component.scss
@@ -5,11 +5,15 @@
   padding:0;
   border-radius: 10px;
   overflow: inherit;
+  height: auto;
 }
 ::ng-deep .resize{
   &.bottomright, &.bottomleft, &.topright, &.topleft{
     display: none!important;
   }
+}
+.cdk-overlay-pane{
+  max-width: inherit!important;
 }
 .cropper-body{
   max-width:100%;
@@ -99,5 +103,42 @@
     color:$blue;
     text-transform: uppercase;
     font-size: 14px;
+  }
+}
+
+@media screen and (max-width:768px) {
+  .image-cropper{
+    height: 325px;
+    margin-bottom:15px;
+  }
+  .navigation-box{
+    padding:0 5px;
+    margin-bottom:15px;
+    flex-wrap: wrap;
+    &__button{
+      padding:10px 0;
+      font-size: 14px;
+    }
+  }
+  .rotate-box{
+    order:-1;
+    margin-bottom:15px;
+  }
+}
+@media screen and (max-width:480px) {
+  .image-cropper{
+    height: 185px;
+  }
+  .navigation-box{
+      &__button{
+        padding:10px 0;
+        width:100px;
+        font-size: 12px;
+      }
+  }
+  .rotate-box{
+    &__text{
+      font-size: 12px;
+    }
   }
 }
