--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -119,6 +119,7 @@
 // USER ACTIONS
 .user-actions{
   padding:40px 0;
+  overflow-x: hidden;
 }
 .actions-icon{
   background-color:$primary;
